Fixed relative links and main title appearance on small screens

--- a/css/custom.css
+++ b/css/custom.css
@@ -9,6 +9,8 @@
 .blue-link {
   color: #0645AD;
   text-decoration: underline;
+}
+.pl10{
   padding-left: 10px;
 }
 
@@ -16,7 +18,9 @@ a:hover {
   color: #3366BB;
 }
 
-.main-title { font-size: 64px !important;}
+@media (min-width: 1200px) {
+  .main-title { font-size: 64px !important;}
+}
 
 .btn-black { color: #333 !important; border-color: #333; }
 .btn-black:hover { color: #fff !important; background: #333; }
